--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="container container__burgers">
                     <div class="burgers__block">
                         <div class="burgers__img">
-                            <img src="/img/burger_slider/Black_beef_burger.png" alt="Black_beef_burger">
+                            <img src="../img/burger_slider/Black_beef_burger.png" alt="Black_beef_burger">
                         </div>
                         <div class="burgers__desc">
                             <div class=" title burgers__desc-title">dark beef burgers</div>
@@ -167,7 +167,7 @@
                                     <div class="team__item-name">Ричард джеймс</div>
                                     <div class="team__item-block">
                                         <div class="team__item-img">
-                                            <img src="/img/team_ava.jpg" alt="" class="team__ava">
+                                            <img src="../img/team_ava.jpg" alt="" class="team__ava">
                                         </div>
                                         <div class="team__item-desc">
                                             <div class=" team__item-title ">Оператор</div>
