--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <div class="burgers__item">
                                 <div class="burgers__block">
                                     <div class="burgers__img">
-                                        <img src="/img/burger_slider/Black_beef_burger.png" class="burgers__img-pic" alt="Black_beef_burger">
+                                        <img src="img/burger_slider/Black_beef_burger.png" class="burgers__img-pic" alt="Black_beef_burger">
                                     </div>
                                     <div class="burgers__desc">
                                         <div class=" title burgers__desc-title">dark beef burgers</div>
@@ -200,7 +200,7 @@
                             <div class="burgers__item">
                                 <div class="burgers__block">
                                     <div class="burgers__img">
-                                        <img src="/img/burger_slider/Chiken burger.png" class="burgers__img-pic" alt="Black_beef_burger">
+                                        <img src="img/burger_slider/Chiken burger.png" class="burgers__img-pic" alt="Black_beef_burger">
                                     </div>
                                     <div class="burgers__desc">
                                         <div class=" title burgers__desc-title">chiken burgers</div>
@@ -267,7 +267,7 @@
                             <div class="burgers__item">
                                 <div class="burgers__block">
                                     <div class="burgers__img">
-                                        <img src="/img/burger_slider/burger_sandwich_PNG4124.png" class="burgers__img-pic" alt="Black_beef_burger">
+                                        <img src="img/burger_slider/burger_sandwich_PNG4124.png" class="burgers__img-pic" alt="Black_beef_burger">
                                     </div>
                                     <div class="burgers__desc">
                                         <div class=" title burgers__desc-title">bugrer sandwich</div>
@@ -1032,7 +1032,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.4/mobile-detect.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
-    <script src="../js/main.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 
